# scrape-and-notify

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/scrape_and_notify/: config.py  logging_formatter.py  main.py  notifier.py  scraper.py
